itemtouchhelper && adapter added for test

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#2d3841</color>
+    <color name="colorPrimaryDark">#1e272d</color>
+    <color name="colorAccent">#009ad2</color>
+
+    <color name="colorrr">#f15151</color>
+
+    <color name="grey">#606674</color>
+
+    <color name="rippleEffect">#2f3440</color>
+
+    <color name="divider">#303643</color>
 </resources>
