--- a/app/src/main/res/layout/note_row_layout.xml
+++ b/app/src/main/res/layout/note_row_layout.xml
@@ -1,65 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
+<android.support.v7.widget.CardView android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="8dp">
+    android:layout_margin="8dp"
+    app:cardBackgroundColor="@color/colorPrimary">
 
-    <ImageView
-        android:id="@+id/imageViewNoteImage"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:src="@mipmap/ic_launcher_round"/>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutNoteText"
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/imageViewNoteImage"
-        android:layout_toLeftOf="@id/linearLayoutNoteText2"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp">
-
-        <TextView
-            android:id="@+id/textViewNoteTitle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="note title"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
-
-        <TextView
-            android:id="@+id/textViewNoteDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="note description"/>
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayoutNoteText2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_alignParentEnd="true"
-        android:gravity="right">
-
-        <TextView
-            android:id="@+id/textViewNoteTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="note title" />
+        android:padding="8dp">
 
         <ImageView
-            android:foreground="@color/colorAccent"
-            android:layout_width="16dp"
-            android:layout_height="16dp"
-            app:srcCompat="@mipmap/ic_launcher_round"/>
+            android:id="@+id/imageViewNoteImage"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_centerVertical="true"
+            android:src="@mipmap/ic_launcher_round"/>
 
-    </LinearLayout>
+        <LinearLayout
+            android:id="@+id/linearLayoutNoteText"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:layout_toRightOf="@id/imageViewNoteImage"
+            android:layout_toLeftOf="@id/linearLayoutNoteText2"
+            android:orientation="vertical"
+            android:gravity="center_vertical"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp">
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/textViewNoteTitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="note title"
+                android:singleLine="true"
+                android:gravity="left"
+                android:textColor="?android:textColorPrimary"
+                android:layout_marginBottom="16dp"/>
+
+            <TextView
+                android:id="@+id/textViewNoteDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:singleLine="true"
+                android:text="note description" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/linearLayoutNoteText2"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true"
+            android:gravity="right">
+
+            <TextView
+                android:id="@+id/textViewNoteTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="note time"
+                android:layout_marginBottom="16dp"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_back_indicator" />
+
+        </LinearLayout>
+
+    </RelativeLayout>
+
+</android.support.v7.widget.CardView>
