a lot of changes

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="mradmin.example.com.datetimeapp.MainActivity"
+    tools:context=".activity.MainActivity"
     android:background="@color/colorPrimaryDark">
 
     <include layout="@layout/main_app_bar" android:id="@+id/main_app_bar"/>
