--- a/app/src/main/res/layout/note_row_layout.xml
+++ b/app/src/main/res/layout/note_row_layout.xml
@@ -3,7 +3,7 @@
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="8dp"
+    android:layout_marginBottom="1dp"
     app:cardBackgroundColor="@color/colorPrimary">
 
     <RelativeLayout
@@ -66,9 +66,11 @@
                 android:layout_marginBottom="16dp"/>
 
             <ImageView
+                android:id="@+id/imageViewNotePinned"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_back_indicator" />
+                app:srcCompat="@drawable/ic_back_indicator"
+                android:visibility="gone"/>
 
         </LinearLayout>
 
