--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,33 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.MainActivity"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:gravity="center"
+    android:orientation="vertical">
 
-    <include layout="@layout/main_app_bar" android:id="@+id/main_app_bar"/>
-
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewMain"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/main_app_bar">
-
-    </android.support.v7.widget.RecyclerView>
-
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginRight="16dp"
-        android:padding="16dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="16dp"
-        app:backgroundTint="@color/colorAccent"
-        android:tint="?android:textColorPrimary"
-        android:visibility="visible"/>
+        app:elevation="0dp"
+        android:elevation="0dp">
 
-</RelativeLayout>
+        <include layout="@layout/main_toolbar_layout"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <!--<include layout="@layout/base_toolbar"/>-->
+    <android.support.design.widget.CoordinatorLayout
+        android:id="@+id/myCoordinatorLayout"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="match_parent"
+        >
+
+        <LinearLayout
+            android:id="@+id/notesEmptyView"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:src="@drawable/empty_view_bg"
+                android:layout_width="100dp"
+                android:layout_height="100dp" />
+
+            <TextView
+                android:text="no notes"
+                android:textSize="16sp"
+                android:paddingTop="4dp"
+                android:paddingBottom="8dp"
+                android:gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+        </LinearLayout>
+
+        <mradmin.example.com.datetimeapp.view.adapter.RecyclerViewEmptySupport
+            android:id="@+id/recyclerViewMain"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        </mradmin.example.com.datetimeapp.view.adapter.RecyclerViewEmptySupport>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_create"
+            app:backgroundTint="@color/colorAccent"
+            android:tint="?android:textColorPrimary"
+            android:layout_gravity="bottom|right|end"
+            app:layout_behavior="mradmin.example.com.datetimeapp.view.adapter.ScrollingFABBehaviour" />
+
+    </android.support.design.widget.CoordinatorLayout>
+
+</LinearLayout>
