--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
 
     <color name="grey">#606674</color>
 
-    <color name="rippleEffect">#2f3440</color>
+    <color name="rippleEffect">#394c56</color>
 
     <color name="divider">#303643</color>
 
