--- a/app/src/main/res/layout/note_row_layout.xml
+++ b/app/src/main/res/layout/note_row_layout.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:layout_width="match_parent"
+<LinearLayout android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="1dp"
-    app:cardBackgroundColor="@color/colorPrimary">
+    android:background="@drawable/note_row_layout_ripple">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -19,61 +19,83 @@
             android:src="@mipmap/ic_launcher_round"/>
 
         <LinearLayout
-            android:id="@+id/linearLayoutNoteText"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:layout_toRightOf="@id/imageViewNoteImage"
-            android:layout_toLeftOf="@id/linearLayoutNoteText2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical"
             android:gravity="center_vertical"
             android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/imageViewNoteImage"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp">
+            android:weightSum="1">
 
-            <TextView
-                android:id="@+id/textViewNoteTitle"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:id="@+id/linearLayoutNoteText"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="note title"
-                android:singleLine="true"
-                android:gravity="left"
-                android:textColor="?android:textColorPrimary"
-                android:layout_marginBottom="16dp"/>
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:layout_marginBottom="8dp">
 
-            <TextView
-                android:id="@+id/textViewNoteDescription"
-                android:layout_width="wrap_content"
+                <TextView
+                    android:id="@+id/textViewNoteTitle"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="note title"
+                    android:singleLine="true"
+                    android:textStyle="bold"
+                    android:gravity="left"
+                    android:textSize="16sp"
+                    android:layout_weight="1"
+                    android:textColor="?android:textColorPrimary"
+                    android:layout_marginRight="8dp"/>
+
+                <TextView
+                    android:id="@+id/textViewNoteTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="note time"
+                    android:textSize="12sp"
+                    android:singleLine="true"
+                    android:layout_gravity="right|center_vertical"
+                    android:gravity="right"
+                    android:layout_weight="0"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/linearLayoutNoteText2"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:text="note description" />
+                android:orientation="horizontal"
+                android:gravity="center_vertical"
+                android:weightSum="1">
 
-        </LinearLayout>
+                <TextView
+                    android:id="@+id/textViewNoteDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:singleLine="true"
+                    android:textSize="12sp"
+                    android:layout_gravity="left|center_vertical"
+                    android:text="note description"
+                    android:layout_marginRight="8dp"
+                    android:layout_weight="1"/>
 
-        <LinearLayout
-            android:id="@+id/linearLayoutNoteText2"
-            android:layout_width="wrap_content"
-            android:layout_height="56dp"
-            android:orientation="vertical"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:gravity="right">
+                <ImageView
+                    android:id="@+id/imageViewNotePinned"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
+                    android:layout_weight="0"
+                    android:layout_gravity="right"
+                    app:srcCompat="@drawable/ic_pin"
+                    android:tint="@color/colorAccent"
+                    android:visibility="visible"
+                    />
 
-            <TextView
-                android:id="@+id/textViewNoteTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="note time"
-                android:layout_marginBottom="16dp"/>
-
-            <ImageView
-                android:id="@+id/imageViewNotePinned"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/ic_back_indicator"
-                android:visibility="gone"/>
+            </LinearLayout>
 
         </LinearLayout>
 
     </RelativeLayout>
 
-</android.support.v7.widget.CardView>
+</LinearLayout>
