--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2d3841</color>
+    <color name="colorPrimary">#263036</color>
     <color name="colorPrimaryDark">#1e272d</color>
     <color name="colorAccent">#009ad2</color>
 
