--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -44,6 +44,14 @@
                     android:layout_gravity="right|center">
 
                     <ImageView
+                        android:id="@+id/imageViewPin"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        app:srcCompat="@drawable/ic_pin"
+                        android:tint="@color/grey"
+                        android:padding="16dp"/>
+
+                    <ImageView
                         android:id="@+id/imageViewSave"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
