--- a/app/src/main/res/layout/list_item_header.xml
+++ b/app/src/main/res/layout/list_item_header.xml
@@ -8,7 +8,7 @@
         android:text="Header"
         android:textSize="14sp"
         android:background="@drawable/header_section_back"
-        android:layout_width="wrap_content"
+        android:layout_width="128dp"
         android:layout_height="wrap_content"
         android:padding="4dp"
         android:gravity="center"
