image view shade in collapsing

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,4 +15,6 @@
     <color name="mdtp_accent_color">#009ad2</color>
     <color name="mdtp_accent_color_dark">#017dab</color>
 
+    <color name="white">#ffffff</color>
+
 </resources>
