--- a/app/src/main/res/layout/activity_note_detail.xml
+++ b/app/src/main/res/layout/activity_note_detail.xml
@@ -31,6 +31,12 @@
                 android:scaleType="centerCrop"
                 android:layout_marginTop="-27dp"/>
 
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/collapsing_back_shape"
+                android:layout_marginTop="-27dp"/>
+
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
@@ -48,7 +54,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         app:srcCompat="@drawable/ic_pin"
-                        android:tint="@color/grey"
+                        android:tint="@color/white"
                         android:padding="16dp"/>
 
                     <ImageView
