--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,11 @@
         <item name="android:homeAsUpIndicator">@drawable/ic_back_indicator</item>
 
         <item name="mdtp_theme_dark">true</item>
+
+        <item name="windowActionModeOverlay">true</item>
+
+        <item name="android:actionModeBackground">@color/colorAccent</item>
+
     </style>
 
     <style name="CropperStyle" parent="@style/Theme.AppCompat">
